# ScreenMind

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_api.py  需求文档.md
screenmind/: __init__.py  config.py  main.py
screenmind-extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
screenmind-miniprogram/: app.js  app.json  app.wxss
screenmind-miniprogram/pages/detail/: detail.js  detail.json  detail.wxml  detail.wxss
screenmind-miniprogram/pages/history/: history.js  history.json  history.wxml  history.wxss
screenmind-miniprogram/pages/index/: index.js  index.json  index.wxml  index.wxss
screenmind-web/: README.md  start.py
screenmind-web/backend/: requirements.txt
screenmind-web/backend/app/: main.py
screenmind-web/backend/app/api/: analyze.py  config.py  health.py  screenshot.py
screenmind-web/backend/app/core/: ai_service.py  logger.py
screenmind/gui/: main_window.py  system_tray.py
screenmind/modules/: ai_service.py  hotkey.py  screenshot.py
